SDKs/twilio.com/twilio_events_v1/1.37.4/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            CreateSinkRequest req = new CreateSinkRequest() {{
                security = new CreateSinkSecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                request = new CreateSinkCreateSinkRequest() {{
                    description = "sit";
                    sinkConfiguration = "voluptas";
                    sinkType = "webhook";
                }};
            }};

            CreateSinkResponse res = sdk.createSink(req);

            if (res.eventsV1Sink.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createSink` - Create a new Sink
* `createSinkTest` - Create a new Sink Test Event for the given Sink.
* `createSinkValidate` - Validate that a test event for a Sink was received.
* `createSubscribedEvent` - Create a new Subscribed Event type for the subscription
* `createSubscription` - Create a new Subscription.
* `deleteSink` - Delete a specific Sink.
* `deleteSubscribedEvent` - Remove an event type from a subscription.
* `deleteSubscription` - Delete a specific Subscription.
* `fetchEventType` - Fetch a specific Event Type.
* `fetchSchema` - Fetch a specific schema with its nested versions.
* `fetchSchemaVersion` - Fetch a specific schema and version.
* `fetchSink` - Fetch a specific Sink.
* `fetchSubscribedEvent` - Read an Event for a Subscription.
* `fetchSubscription` - Fetch a specific Subscription.
* `listEventType` - Retrieve a paginated list of all the available Event Types.
* `listSchemaVersion` - Retrieve a paginated list of versions of the schema.
* `listSink` - Retrieve a paginated list of Sinks belonging to the account used to make the request.
* `listSubscribedEvent` - Retrieve a list of all Subscribed Event types for a Subscription.
* `listSubscription` - Retrieve a paginated list of Subscriptions belonging to the account used to make the request.
* `updateSink` - Update a specific Sink
* `updateSubscribedEvent` - Update an Event for a Subscription.
* `updateSubscription` - Update a Subscription.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
